Replace character icons with images

--- a/index.html
+++ b/index.html
@@ -185,11 +185,11 @@
     </div>
     <div class="character-selection">
         <div class="character-option" onclick="selectCharacter('male')">
-            <div style="width:180px;height:180px;border-radius:10px;border:3px solid #2dd4ff;display:flex;align-items:center;justify-content:center;background:linear-gradient(135deg, #1e3c72, #2a5298);font-size:80px;">🚀</div>
+            <img class="character-img" src="male.png" alt="Karakter Pria">
             <div class="character-name">Kapten Alex</div>
         </div>
         <div class="character-option" onclick="selectCharacter('female')">
-            <div style="width:180px;height:180px;border-radius:10px;border:3px solid #2dd4ff;display:flex;align-items:center;justify-content:center;background:linear-gradient(135deg, #c33764, #e9396d);font-size:80px;">👩‍🚀</div>
+            <img class="character-img" src="female.png" alt="Karakter Wanita">
             <div class="character-name">Letnan Sarah</div>
         </div>
     </div>
